2009-2-23  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-16.
    * R/jags: nchain --> n.chains (changed by rjags)


2009-2-10  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-15.
    * R/jags: inits=NULL, let jags gen inits


2009-1-28  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-14.
    * R/traceplot: add traceplot generic and rjags method
    * R/jags: fix the bug when n.burnin=0


2008-11-6  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-13.
    * R/recompile: update set to 100 to ensure complete adaptation


2008-10-17  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-12.
    * man/recompile: documentation for recompile.
    * R/recompile: new function to pick up previous saved rjags object.


2008-10-7  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-11.
    * R/Allclass: explicitly using setOldClass from methods::
    * prepare to release! 



2008-8-18  Ben Bolker <bolker@zoology.ufl.edu>
    * DESCRIPTION (Version, Date): 0.01-10.
    * R/jags: 
        1. change pos=parent.frame(1)
        2. add envir=parent.frame(1) in data dumping


2008-5-7  Yu-Sung Su     <ys463@columbia.edu>  
          Masanao Yajima <yajima@stat.columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-1.